# cosmic-notifications

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
cosmic-notifications-config/: Cargo.toml
cosmic-notifications-config/src/: lib.rs
cosmic-notifications-util/: Cargo.toml
cosmic-notifications-util/src/: image.rs  lib.rs  markup.rs
data/: com.system76.CosmicNotifications.desktop  com.system76.CosmicNotifications.metainfo.xml
debian/: changelog  control  copyright  install  rules
i18n/ar/: cosmic_notifications.ftl
i18n/be/: cosmic_notifications.ftl
i18n/bg/: cosmic_notifications.ftl
i18n/cs/: cosmic_notifications.ftl
i18n/de/: cosmic_notifications.ftl
i18n/el/: cosmic_notifications.ftl
i18n/en/: cosmic_notifications.ftl
i18n/es/: cosmic_notifications.ftl
i18n/es-419/: cosmic_notifications.ftl
i18n/et/: cosmic_notifications.ftl
i18n/fi/: cosmic_notifications.ftl
i18n/fr/: cosmic_notifications.ftl
i18n/ga/: cosmic_notifications.ftl
i18n/hi/: cosmic_notifications.ftl
i18n/hu/: cosmic_notifications.ftl
i18n/is/: cosmic_notifications.ftl
i18n/it/: cosmic_notifications.ftl
i18n/ja/: cosmic_notifications.ftl
i18n/kab/: cosmic_notifications.ftl
i18n/kn/: cosmic_notifications.ftl
i18n/lt/: cosmic_notifications.ftl
i18n/nb-NO/: cosmic_notifications.ftl
i18n/nl/: cosmic_notifications.ftl
i18n/nn/: cosmic_notifications.ftl
i18n/pa/: cosmic_notifications.ftl
i18n/pl/: cosmic_notifications.ftl
i18n/pt/: cosmic_notifications.ftl
i18n/pt-BR/: cosmic_notifications.ftl
i18n/ro/: cosmic_notifications.ftl
i18n/ru/: cosmic_notifications.ftl
i18n/sr/: cosmic_notifications.ftl
i18n/sr-Cyrl/: cosmic_notifications.ftl
i18n/sr-Latn/: cosmic_notifications.ftl
i18n/sv/: cosmic-notifications.ftl  cosmic_notifications.ftl
i18n/tr/: cosmic_notifications.ftl
i18n/uk/: cosmic_notifications.ftl
i18n/zh-TW/: cosmic_notifications.ftl
i18n/zh_CN/: cosmic_notifications.ftl
src/: app.rs  config.rs  localize.rs  main.rs  markup.rs  util.rs
src/subscriptions/: applet.rs  mod.rs  notifications.rs  panel.rs
