[package]
name = "cosmic-notifications"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "autosize",
    "a11y",
    "winit",
    "multi-window",
    "wayland",
    "tokio",
    "dbus-config",
] }
anyhow = "1.0"
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "once_cell",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-journald = { version = "0.3.1", optional = true }
rust-embed = "8.6.0"
rustix = "1.0.3"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.9.0"
tokio = { version = "1.44.1", features = [
    "sync",
    "rt",
    "tracing",
    "macros",
    "net",
    "io-util",
] }
zbus = { version = "4.4.0", features = ["tokio", "p2p"] }
cosmic-notifications-util = { path = "./cosmic-notifications-util" }
cosmic-notifications-config = { path = "./cosmic-notifications-config" }
cosmic-panel-config = { git = "https://github.com/pop-os/cosmic-panel" }
log-panics = { version = "2", features = ["with-backtrace"] }

# remove after cosmic-panel is updated to use zbus v4
# [patch."https://github.com/pop-os/libcosmic"]
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# libcosmic = { git = "https://github.com/pop-os/libcosmic//" }

[features]
systemd = ["dep:tracing-journald"]
default = ["systemd"]

[workspace]
members = ["cosmic-notifications-util", "cosmic-notifications-config"]

[profile.release]
opt-level = "s"
lto = "thin"

[patch.'https://github.com/smithay/client-toolkit/']
smithay-client-toolkit = { version = "0.19.2" }
# smithay-client-toolkit = { git = "https://github.com/smithay/client-toolkit//", rev = "3bed072" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
