[package]
name = "cosmic-notifications"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "autosize",
    "dbus-config",
    "a11y",
    "winit",
    "multi-window",
    "wayland",
    "tokio",
    "dbus-config",
] }
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
anyhow = "1.0"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
color-backtrace = "0.7.1"
cosmic-notifications-util = { path = "./cosmic-notifications-util" }
cosmic-notifications-config = { path = "./cosmic-notifications-config" }
cosmic-panel-config = { git = "https://github.com/pop-os/cosmic-panel" }
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false}
rust-embed = "8.7.2"
rustix = "1.1.1"
tokio = { version = "1.47.1", features = [
    "sync",
    "rt",
    "tracing",
    "macros",
    "net",
    "io-util",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter"] }
tracing-journald = { version = "0.3.1", optional = true }
zbus = { version = "5.11.0", features = ["tokio", "p2p"] }

[features]
systemd = ["dep:tracing-journald"]
default = ["systemd"]

[workspace]
members = ["cosmic-notifications-util", "cosmic-notifications-config"]

[profile.release]
opt-level = "s"
lto = "thin"

# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
