[package]
name = "cosmic-notifications-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["zbus_notifications"]
zbus_notifications = ["image", "zbus"]
image = ["fast_image_resize"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zbus = { version = "4.4.0", optional = true }
fast_image_resize = { version = "5.1.2", optional = true }
tracing = "0.1.41"
url = "2.5.4"
